Add metadata tracks get endpoint
